--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
   padding: 0 0.5rem;
 }
 
+.main-section {
+  background: #FFAA14;
+}
+
 
 .counter-section {
   width: 100%;
@@ -27,19 +31,30 @@
 .counter-content {
   width: 30%;
   text-align: center;
+  padding: 3rem;
+  border-radius: 1rem;
+  box-shadow: 9px 8px 15px -3px rgba(0, 0, 0, 0.2);
+  background: #fff;
 }
 
 .counter-content h2 {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .counter-content button {
   padding: 0.5rem 3rem;
-  border: 1px solid black;
+  border: 1px solid #FFAA14;
   border-radius: 1.8rem;
   cursor: pointer;
+  font-size: 1.1rem;
 }
 
 .counter-content button:hover {
-  background: #e9e9e9;
+  background: #FFAA14;
+  color: #fff;
+  transition: 0.5s;
 }
+
+/* .counter-content button:hover {
+  background: #e9e9e9;
+} */
